auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a977c44d",
+   "id": "828efab9",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ab6df9",
+   "id": "5f090f91",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a0ec68",
+   "id": "fe91b49c",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e073dd",
+   "id": "2a963f17",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed512368",
+   "id": "810c6750",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e947b398",
+   "id": "5168036c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46967c68",
+   "id": "674451bf",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4800a1",
+   "id": "b4cc953b",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70118642",
+   "id": "9623f973",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb65df0d",
+   "id": "aa709eb4",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d84dab3",
+   "id": "b6f9e144",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0e57c9",
+   "id": "3ffc6f9e",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca947cf5",
+   "id": "1616e3a1",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c427f2f6",
+   "id": "6f988ff8",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548ca698",
+   "id": "869954d2",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "631f10b0",
+   "id": "2a7e69a2",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11e61f12",
+   "id": "6bc59052",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4162393a",
+   "id": "8a18948d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a7a4713",
+   "id": "4f5d8e0e",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158f06a5",
+   "id": "8b9e8f5a",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf6ef48",
+   "id": "e4869dc0",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a5552f",
+   "id": "5951beb7",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd2a2dc",
+   "id": "f77b575e",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8efdbc2",
+   "id": "500733d7",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf7b7f9",
+   "id": "77760580",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d19bd2f",
+   "id": "77619225",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "081f634b",
+   "id": "35da0f38",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb7a31c",
+   "id": "59819cc6",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ffbc697",
+   "id": "542116ae",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a712444",
+   "id": "a56ef38f",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79953444",
+   "id": "1a6f1592",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4c4364",
+   "id": "86f0484c",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f844817",
+   "id": "a89c2cbe",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67422bf6",
+   "id": "027fba6a",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd4eaa2",
+   "id": "e0ac8509",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb2cba74",
+   "id": "7a373242",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a581020a",
+   "id": "2cfc6c5c",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c48ab2df",
+   "id": "43043355",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0684e2",
+   "id": "a1c91b82",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b3d988",
+   "id": "4a3d6f94",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcbdad60",
+   "id": "6937b69f",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c264025",
+   "id": "71be8faf",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9d92b9",
+   "id": "2defafd0",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec6098c",
+   "id": "413492cc",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22461e10",
+   "id": "9726ffdc",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b80aa598",
+   "id": "38e3329e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5d8f83",
+   "id": "b80f578d",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5436be",
+   "id": "da9ccf0b",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ec65f7",
+   "id": "b445ea6e",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49fb0b7b",
+   "id": "20c53c2f",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264af767",
+   "id": "373ea1bc",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ce6c92",
+   "id": "47cac65a",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77b63b7",
+   "id": "cc9442d7",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9986ab7",
+   "id": "55ae3af8",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee63853",
+   "id": "e361ab84",
    "metadata": {
     "hide-output": false
    },
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d072f461",
+   "id": "8e172121",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   }
  ],
  "metadata": {
-  "date": 1741661034.4651134,
+  "date": 1741730299.916217,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
