--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4553026",
+   "id": "9be7f948",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1873889",
+   "id": "51379c67",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6ad51a",
+   "id": "340566db",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6acd2f8b",
+   "id": "6ad433ac",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d008778",
+   "id": "b58d006f",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "711b488a",
+   "id": "e1e5c7f5",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c58729",
+   "id": "e03e05fb",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d982dace",
+   "id": "7234cb4f",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5a52ef",
+   "id": "ea263c77",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d401c43",
+   "id": "f39f1333",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b40f55",
+   "id": "4ddd0f84",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5370a3",
+   "id": "d68d01be",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27bcf001",
+   "id": "9579c5da",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947494af",
+   "id": "b99a4ea3",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9e3a19",
+   "id": "2f5cd1e4",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b00a17",
+   "id": "f0d3a93e",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c75c79",
+   "id": "6fffeec5",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "345baac1",
+   "id": "b117e80d",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf195cc9",
+   "id": "fe0b98ad",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03257f8c",
+   "id": "7d7c4809",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0775fdcf",
+   "id": "31608829",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "504c7d24",
+   "id": "1e78449a",
    "metadata": {
     "hide-output": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dfb56f2",
+   "id": "58e67799",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3dd507b",
+   "id": "7886905a",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "976d91e2",
+   "id": "63c82058",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7890bf1",
+   "id": "571c4b0f",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62fb7c2f",
+   "id": "90c71bda",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f681588b",
+   "id": "c9a13798",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72129567",
+   "id": "c47a6f80",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ad2e36",
+   "id": "961d3eef",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d34d3c",
+   "id": "3c3088cf",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea19a4e",
+   "id": "5d8ee59a",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ede217",
+   "id": "86e10ac3",
    "metadata": {
     "hide-output": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f99389",
+   "id": "f803463a",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa53d294",
+   "id": "9c2c21cf",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b495de",
+   "id": "dd636681",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c3f4d89",
+   "id": "1b47db51",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8247d6",
+   "id": "852b95bf",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce9001e",
+   "id": "0dc1d2c5",
    "metadata": {},
    "source": [
     "We run the code again to eliminate compile time."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce110d3",
+   "id": "b59590e1",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87bb7b40",
+   "id": "c27ebd48",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d502c6",
+   "id": "123cd6bd",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91768a91",
+   "id": "7cee1a4e",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176ca29d",
+   "id": "9ea66fb0",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e57bd0",
+   "id": "aa1511d4",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e340fa",
+   "id": "9b1f19bb",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2f35f3e",
+   "id": "9709b422",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9521fc",
+   "id": "ea1b2e1a",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01bf171",
+   "id": "4ed7d8eb",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db44a20",
+   "id": "07c200d4",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31ac45b",
+   "id": "2cc9899d",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f94208ae",
+   "id": "cf94eaed",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83c7283",
+   "id": "ab8a298d",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc5c1c28",
+   "id": "f0e004b1",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c440d33a",
+   "id": "30c6c61c",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085d2281",
+   "id": "8f6e06bc",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55e6d31",
+   "id": "b608be6c",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7e2872c",
+   "id": "3585c3d5",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   }
  ],
  "metadata": {
-  "date": 1741661034.6099555,
+  "date": 1741730300.060878,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
