--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b22c11f1",
+   "id": "b78f5f6e",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a07b967",
+   "id": "d7e7cf52",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46aebf0a",
+   "id": "48571db8",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b7c9ba3",
+   "id": "6e9df6de",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d99b0d",
+   "id": "225038ec",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f2a734",
+   "id": "4b26336a",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "479039c8",
+   "id": "ab760e7b",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe73e75",
+   "id": "4943f062",
    "metadata": {},
    "source": [
     "Next we import some tools from Keras."
@@ -105,20 +105,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07dcb6c",
+   "id": "26bbde31",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "import keras\n",
-    "from keras.models import Sequential\n",
+    "from keras import Sequential\n",
     "from keras.layers import Dense"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "394af89f",
+   "id": "f25d0f3a",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -129,11 +129,15 @@
     "\n",
     "$$\n",
     "y_i = f(x_i) + \\epsilon_i,\n",
-    "    \\qquad i=1, \\ldots, n\n",
+    "    \\qquad i=1, \\ldots, n,\n",
     "$$\n",
     "\n",
-    "The map $ f $ is specified inside the function and $ \\epsilon_i $ is an independent\n",
-    "draw from a fixed normal distribution.\n",
+    "where\n",
+    "\n",
+    "- the input sequence $ (x_i) $ is an evenly-spaced grid,  \n",
+    "- $ f $ is a nonlinear transformation, and  \n",
+    "- each $ \\epsilon_i $ is independent white noise.  \n",
+    "\n",
     "\n",
     "Here’s the function that creates vectors `x` and `y` according to the rule\n",
     "above."
@@ -142,24 +146,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c3c7dd",
+   "id": "028e3bf3",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def generate_data(x_min=0, x_max=5, data_size=400):\n",
+    "def generate_data(x_min=0,           # Minimum x value\n",
+    "                  x_max=5,           # Max x value\n",
+    "                  data_size=400,     # Default size for dataset\n",
+    "                  seed=1234):\n",
+    "    np.random.seed(seed)\n",
     "    x = np.linspace(x_min, x_max, num=data_size)\n",
-    "    x = x.reshape(data_size, 1)\n",
-    "    ϵ = 0.2 * np.random.randn(*x.shape)\n",
+    "    \n",
+    "    ϵ = 0.2 * np.random.randn(data_size)\n",
     "    y = x**0.5 + np.sin(x) + ϵ\n",
-    "    x, y = [z.astype('float32') for z in (x, y)]\n",
+    "    # Keras expects two dimensions, not flat arrays\n",
+    "    x, y = [np.reshape(z, (data_size, 1)) for z in (x, y)]\n",
     "    return x, y"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83b9c580",
+   "id": "5dd69d95",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -168,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b944842",
+   "id": "7d5a6b31",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1137894f",
+   "id": "9b43df8a",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -188,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9af6c8d",
+   "id": "27f018e5",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba51402",
+   "id": "93ccc7f9",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -212,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f893421c",
+   "id": "5311fd14",
    "metadata": {
     "hide-output": false
    },
@@ -223,33 +232,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2c6ba0",
+   "id": "c1786c5d",
    "metadata": {},
    "source": [
     "## Models\n",
     "\n",
-    "We supply functions to build two types of models.\n",
+    "We supply functions to build two types of models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0242631e",
+   "metadata": {},
+   "source": [
+    "## Regression model\n",
     "\n",
     "The first implements linear regression.\n",
     "\n",
     "This is achieved by constructing a neural network with just one layer, that maps\n",
     "to a single dimension (since the prediction is real-valued).\n",
     "\n",
-    "The input `model` will be an instance of `keras.Sequential`, which is used to\n",
+    "The object `model` will be an instance of `keras.Sequential`, which is used to\n",
     "group a stack of layers into a single prediction model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93d96d4",
+   "id": "47fca25f",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def build_regression_model(model):\n",
-    "    model.add(Dense(units=1))\n",
+    "def build_regression_model():\n",
+    "    # Generate an instance of Sequential, to store layers and training attributes\n",
+    "    model = Sequential()\n",
+    "    # Add a single layer with scalar output\n",
+    "    model.add(Dense(units=1))  \n",
+    "    # Configure the model for training\n",
     "    model.compile(optimizer=keras.optimizers.SGD(), \n",
     "                  loss='mean_squared_error')\n",
     "    return model"
@@ -257,13 +278,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2483fdd",
+   "id": "fec84e23",
    "metadata": {},
    "source": [
-    "In the function above you can see that we use stochastic gradient descent to\n",
-    "train the model, and that the loss is mean squared error (MSE).\n",
+    "In the function above you can see that\n",
     "\n",
-    "MSE is the standard loss function for ordinary least squares regression.\n",
+    "- we use stochastic gradient descent to train the model, and  \n",
+    "- the loss is mean squared error (MSE).  \n",
+    "\n",
+    "\n",
+    "The call `model.add` adds a single layer the activation function equal to the identity map.\n",
+    "\n",
+    "MSE is the standard loss function for ordinary least squares regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec1a2bb",
+   "metadata": {},
+   "source": [
+    "### Deep Network\n",
     "\n",
     "The second function creates a dense (i.e., fully connected) neural network with\n",
     "3 hidden layers, where each hidden layer maps to a k-dimensional output space."
@@ -272,18 +306,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0fc53b8",
+   "id": "165e5dc1",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def build_nn_model(model, k=10, activation_function='tanh'):\n",
-    "    # Construct network\n",
-    "    model.add(Dense(units=k, activation=activation_function))\n",
-    "    model.add(Dense(units=k, activation=activation_function))\n",
-    "    model.add(Dense(units=k, activation=activation_function))\n",
-    "    model.add(Dense(1))\n",
+    "def build_nn_model(output_dim=10, num_layers=3, activation_function='tanh'):\n",
+    "    # Create a Keras Model instance using Sequential()\n",
+    "    model = Sequential()\n",
+    "    # Add layers to the network sequentially, from inputs towards outputs\n",
+    "    for i in range(num_layers):\n",
+    "        model.add(Dense(units=output_dim, activation=activation_function))\n",
+    "    # Add a final layer that maps to a scalar value, for regression.\n",
+    "    model.add(Dense(units=1))\n",
     "    # Embed training configurations\n",
     "    model.compile(optimizer=keras.optimizers.SGD(), \n",
     "                  loss='mean_squared_error')\n",
@@ -292,9 +328,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7020f8a7",
+   "id": "04c4faaf",
    "metadata": {},
    "source": [
+    "### Tracking errors\n",
+    "\n",
     "The following function will be used to plot the MSE of the model during the\n",
     "training process.\n",
     "\n",
@@ -305,19 +343,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4571fd",
+   "id": "156a8021",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def plot_loss_history(training_history, ax):\n",
-    "    ax.plot(training_history.epoch, \n",
+    "    # Plot MSE of training data against epoch\n",
+    "    epochs = training_history.epoch\n",
+    "    ax.plot(epochs, \n",
     "            np.array(training_history.history['loss']), \n",
     "            label='training loss')\n",
-    "    ax.plot(training_history.epoch, \n",
+    "    # Plot MSE of validation data against epoch\n",
+    "    ax.plot(epochs, \n",
     "            np.array(training_history.history['val_loss']),\n",
     "            label='validation loss')\n",
+    "    # Add labels\n",
     "    ax.set_xlabel('Epoch')\n",
     "    ax.set_ylabel('Loss (Mean squared error)')\n",
     "    ax.legend()"
@@ -325,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05e8ca8",
+   "id": "281ee2d3",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -335,32 +377,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4676a4",
+   "id": "5cdd46ab",
    "metadata": {},
    "source": [
     "### Linear regression\n",
     "\n",
-    "We’ll start with linear regression.\n",
-    "\n",
-    "First we create a `Model` instance using `Sequential()`."
+    "We’ll start with linear regression."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4700e602",
+   "id": "54112d57",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "regression_model = build_regression_model(model)"
+    "regression_model = build_regression_model()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab9be4a7",
+   "id": "49e8b9d2",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -369,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10897b84",
+   "id": "4ed372fc",
    "metadata": {
     "hide-output": false
    },
@@ -377,12 +416,12 @@
    "source": [
     "training_history = regression_model.fit(\n",
     "    x, y, batch_size=x.shape[0], verbose=0,\n",
-    "    epochs=4000, validation_data=(x_validate, y_validate))"
+    "    epochs=2000, validation_data=(x_validate, y_validate))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef11aaab",
+   "id": "e7be44d4",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -391,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894d1ed1",
+   "id": "e114a142",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccda06a1",
+   "id": "377d975d",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -413,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28998cff",
+   "id": "80093b2a",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5117f8",
+   "id": "10d8a5ee",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -434,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98e3d33",
+   "id": "7ed45ca9",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3d1b9a",
+   "id": "24288478",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -454,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb58552d",
+   "id": "b4a8aaf8",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0aff60",
+   "id": "7cfa31b3",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -478,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd10b35",
+   "id": "5545f791",
    "metadata": {
     "hide-output": false
    },
@@ -491,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "864012ba",
+   "id": "7d78f2fa",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -504,20 +543,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5473558a",
+   "id": "6c38336c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "nn_model = build_nn_model(model)"
+    "nn_model = build_nn_model()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd7266c",
+   "id": "746fb86a",
    "metadata": {
     "hide-output": false
    },
@@ -525,13 +563,13 @@
    "source": [
     "training_history = nn_model.fit(\n",
     "    x, y, batch_size=x.shape[0], verbose=0,\n",
-    "    epochs=4000, validation_data=(x_validate, y_validate))"
+    "    epochs=2000, validation_data=(x_validate, y_validate))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1dd576",
+   "id": "938dbd9b",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5d235b",
+   "id": "985cdcc5",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -553,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63c8d70",
+   "id": "7e0f25c7",
    "metadata": {
     "hide-output": false
    },
@@ -565,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b3c968",
+   "id": "acef20ca",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -577,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf545c20",
+   "id": "af8a4d1e",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b08659a0",
+   "id": "634ebb00",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfe50481",
+   "id": "8ba07866",
    "metadata": {
     "hide-output": false
    },
@@ -615,10 +653,18 @@
     "plot_results(x_validate, y_validate, y_predict, ax)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc80af8",
+   "metadata": {},
+   "source": [
+    "Not surprisingly, the multilayer neural network does a much better job of fitting the data."
+   ]
   }
  ],
  "metadata": {
-  "date": 1741661034.7451591,
+  "date": 1741730300.1976097,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
