--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c75521f",
+   "id": "a5c26085",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "236e6884",
+   "id": "390ed50b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a833717",
+   "id": "5e7a077e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6190e9f",
+   "id": "db4660d1",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eacce86",
+   "id": "a23f9865",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe364e9",
+   "id": "c0ead234",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77828a1c",
+   "id": "fa247cfa",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38188e19",
+   "id": "5b54365a",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fe7e75",
+   "id": "0708c8d5",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54715fd7",
+   "id": "8b794c80",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6005fdf0",
+   "id": "9ad93e67",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4a8a3a",
+   "id": "64a50d3a",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778b259f",
+   "id": "b1f4a520",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "666aecac",
+   "id": "7636f03b",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b121a3c",
+   "id": "b48f52ca",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662c6646",
+   "id": "dfe19f7b",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1b302b",
+   "id": "c7bcd39e",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82d7406",
+   "id": "10c7e4f2",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00214cba",
+   "id": "187a7e82",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0c496c",
+   "id": "89d43d17",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b735171",
+   "id": "772b2f28",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2647d888",
+   "id": "d727710f",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6259fa1",
+   "id": "8ad2a92a",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87714eb",
+   "id": "82275e65",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e56c1f04",
+   "id": "fa7b5449",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a8e89e",
+   "id": "698d6c36",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e0e795",
+   "id": "ca0d7589",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87eee13b",
+   "id": "01a51f58",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bbff974",
+   "id": "86963d19",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbfc8a5c",
+   "id": "10f100d8",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb312918",
+   "id": "7619b9b1",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affd758b",
+   "id": "122a03ac",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6e7662",
+   "id": "4fef9e3b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c8a5cb",
+   "id": "b246e77c",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57cb5fd6",
+   "id": "66980873",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53197e6a",
+   "id": "2d70e81c",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d16cdd",
+   "id": "9cfa885a",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feec2f58",
+   "id": "2358555d",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "724d3faf",
+   "id": "deac5398",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "889574e5",
+   "id": "3034cce4",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "596b8e82",
+   "id": "5f89e2af",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf8b1f62",
+   "id": "35c2a3a7",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50cd7f1c",
+   "id": "4053df28",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e227f3",
+   "id": "71d0387f",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d7149e",
+   "id": "665e0b8a",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1520e916",
+   "id": "8a819208",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce36043",
+   "id": "64088837",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04aa3e53",
+   "id": "7b4b071a",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b77b04c",
+   "id": "347da112",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "243e6917",
+   "id": "a1717132",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c86aa8",
+   "id": "e1a16f85",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eeb3d7f",
+   "id": "ebaf01a4",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef19a254",
+   "id": "071bc5e1",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39c869f",
+   "id": "0847ae03",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "800148de",
+   "id": "fdb28bc5",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60495e28",
+   "id": "e2a454de",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712535fa",
+   "id": "2309a049",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1741661035.0311701,
+  "date": 1741730300.485941,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
