--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76a413cd",
+   "id": "de86b170",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d33b5d",
+   "id": "de148189",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1741661035.368765,
+  "date": 1741730300.8245332,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
